[package]
name = "rustcms61850bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 
bytes = "1"
 
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util={ version = "0.6", features = ["codec"] }
futures = "0.3"


chrono = "0.4"
futures-util ="0.3" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
quick-xml = "0.30"
anyhow="1"
mac_address="1.1"